# GtkShot

./: aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
src/: Makefile.am  input.c  main.c  pen-editor.c  pen.c  shot.c  toolbar.c  utils.c
